<resources>
    <string name="app_name">DSM-Calendar</string>
    <string name="setting">설정</string>
    <string name="auth_code">인증코드</string>
    <string name="request_event">이벤트 요청</string>
    <string name="show_timeTable">시간표 보기</string>
    <string name="calendar">Calendar</string>
    <string name="school_calendar">학교 캘린더 보기</string>
    <string name="group_calendar">그룹 캘린더 보기</string>
    <string name="my_calendar">개인 캘린더 보기</string>
    <string name="log_out">로그아웃</string>
    <string name="dsm_calendar">DSM Calendar</string>
    <string name="join">Join</string>
    <string name="login">Login</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="confirm_button">confirm button</string>
    <string name="logo">logo</string>
    <string name="mail_box">메세지함</string>
    <string name="back">back</string>
    <string name="whole_timeTable">전체 시간표</string>
    <string name="first_grade">1학년</string>
    <string name="second_grade">2학년</string>
    <string name="third_grade">3학년</string>
    <string name="class_1">1반</string>
    <string name="class_2">2반</string>
    <string name="class_3">3반</string>
    <string name="class_4">4반</string>
    <string name="sample_time_table">sample time table</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="add_schedule">일정 추가</string>
    <string name="input_schedule_title">일정 제목을 입력하세요</string>
    <string name="input_schedule_content">일정 내용을 입력하세요</string>
    <string name="input_auth_code">인증코드 입력</string>
    <string name="auth_code_description">인증 코드를 입력하여  관리자 권한을 취득할 수 있습니다</string>
    <string name="code_here">Code here</string>
    <string name="delete_message">메세지 삭제</string>
    <string name="delete_message_description">정말 메세지를 삭제하시겠습니까?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="make_group">그룹 생성하기</string>
    <string name="make_group_description">그룹 이름을 입력해 주세요</string>
    <string name="accept_group_invite">그룹 초대 요청 수락</string>
    <string name="accept_group_invite_description">초대를 수락하시겠습니까?</string>
    <string name="today">TODAY</string>
    <string name="add_schedule_button">add_button</string>
    <string name="notice">공지사항</string>
    <string name="today_schedule">오늘 일정</string>
    <string name="timeTable">시간표</string>
    <string name="item_message">item_message</string>
    <string name="sample_message">sample message</string>
    <string name="sample_date_text">sample date text</string>
    <string name="sample_group">Sample Group</string>
    <string name="sample_schedule_title">SAMPLE schedule title</string>
    <string name="sample_string">sample string</string>
    <string name="profile_image">profile_image</string>
    <string name="sample_student_number">2학년 2반 1번</string>
    <string name="sample_name">장만월</string>
    <string name="banner_image">banner image</string>
    <string name="deleteSchedule">delete schedule</string>
    <string name="schedule">일정보기</string>
    <string name="member">멤버보기</string>
    <string name="welcome">대마캘린더에 오신 것을 환영합니다</string>
    <string name="std_no">학번</string>
    <string name="sign_in">회원가입</string>
    <string name="invite_member">멤버 초대하기</string>
    <string name="setting_member">그룹 멤버 설정</string>
    <string name="no_list">목록이 비어있습니다.</string>
    <string name="view_banner_detail">배너 상세보기</string>
    <string name="make_notice">공지 생성하기</string>
    <string name="send_request">요청 전송</string>
    <string name="cancel">취소</string>
    <string name="no_notice_content">공지 상세 내용이 없습니다.</string>
    <string name="no_title_notice">제목 없는 공지</string>
    <string name="request_create_notice">공지사항 생성을 요청합니다</string>
    <string name="set_profile">프로필 설정</string>
</resources>
