<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_navigation_setting"
        android:icon="@drawable/ic_gear"
        android:title="@string/setting"/>
    <item
        android:id="@+id/item_navigation_code"
        android:icon="@drawable/ic_authentication"
        android:title="@string/auth_code"/>

    <item
        android:id="@+id/item_navigation_event"
        android:icon="@drawable/ic_confetti"
        android:title="@string/request_event"/>

    <item
        android:id="@+id/item_navigation_timeTable"
        android:icon="@drawable/ic_calendar_logo"
        android:title="@string/show_timeTable"/>

    <group
        android:id="@+id/group_navigation_calendar"
        android:checkableBehavior="single">

        <item
            android:title="@string/calendar"
            android:checkable="false"
            android:enabled="false"/>

        <item
            android:id="@+id/item_navigation_calendar_school"
            android:icon="@drawable/ic_school_logo"
            android:title="@string/school_calendar"/>

        <item
            android:id="@+id/item_navigation_calendar_group"
            android:icon="@drawable/ic_multiple_users_silhouette"
            android:title="@string/group_calendar"/>

        <item
            android:id="@+id/item_navigation_calendar_my"
            android:icon="@drawable/ic_avatar"
            android:title="@string/my_calendar"/>

    </group>

    <item
        android:id="@+id/item_navigation_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/log_out"/>
</menu>