<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="#6cccde">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
        android:src="@drawable/sample_people"
        android:contentDescription="@string/profile_image" />

    <TextView
        android:id="@+id/tv_main_userclass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:textSize="16dp"
        android:text="@string/sample_student_number"
        android:fontFamily="@font/bm_dohyun"/>

    <TextView
        android:id="@+id/tv_main_userid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:textSize="18dp"
        android:text="@string/sample_name"
        android:fontFamily="@font/bm_dohyun"/>

</androidx.constraintlayout.widget.ConstraintLayout>