<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/join"
        android:fontFamily="@font/bm_dohyun"
        android:textSize="20dp"/>

    <View
        android:id="@+id/view_color_sign_in"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in"
        android:layout_marginTop="10dp"
        android:background="#6cccde"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/view_color_sign_in"
        app:layout_constraintBottom_toBottomOf="@id/view_color_sign_in"
        app:layout_constraintStart_toStartOf="@id/view_color_sign_in"
        app:layout_constraintEnd_toEndOf="@id/view_color_sign_in"
        android:text="@string/welcome"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/bm_dohyun"/>

    <TextView
        android:id="@+id/tv_sign_in_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view_color_sign_in"
        app:layout_constraintStart_toStartOf="@id/et_sign_in_id"
        android:layout_marginTop="60dp"
        android:text="@string/id"
        android:textColor="#3da2b5"
        android:textSize="15dp"
        android:fontFamily="@font/bm_dohyun"/>

    <EditText
        android:id="@+id/et_sign_in_id"
        android:layout_width="300dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_sign_in_background"/>

    <TextView
        android:id="@+id/tv_sign_in_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_sign_in_id"
        app:layout_constraintStart_toStartOf="@id/et_sign_in_password"
        android:layout_marginTop="30dp"
        android:text="@string/password"
        android:textColor="#3da2b5"
        android:textSize="15dp"
        android:fontFamily="@font/bm_dohyun"/>

    <EditText
        android:id="@+id/et_sign_in_password"
        android:layout_width="300dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_sign_in_background"/>

    <TextView
        android:id="@+id/tv_sign_in_std_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_sign_in_password"
        app:layout_constraintStart_toStartOf="@id/et_sign_in_std_no"
        android:layout_marginTop="30dp"
        android:text="@string/std_no"
        android:textColor="#3da2b5"
        android:textSize="15dp"
        android:fontFamily="@font/bm_dohyun"/>

    <EditText
        android:id="@+id/et_sign_in_std_no"
        android:layout_width="300dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in_std_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_sign_in_background"/>

    <Button
        android:id="@+id/button_sign_in_confirm"
        android:layout_width="100dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/et_sign_in_std_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="120dp"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/bm_dohyun"
        android:background="@drawable/button_sign_in_confirm_background"/>

</androidx.constraintlayout.widget.ConstraintLayout>