<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ecf0f1">

    <View
        android:id="@+id/view_logo"
        android:layout_width="280dp"
        android:layout_height="160dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="380dp"
        android:background="@drawable/view_logo_round_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="@id/view_logo"
        app:layout_constraintBottom_toBottomOf="@id/view_logo"
        app:layout_constraintStart_toStartOf="@+id/view_logo"
        app:layout_constraintEnd_toEndOf="@id/view_logo"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="140dp"
        android:src="@drawable/main_logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/view_logo"
        app:layout_constraintStart_toStartOf="@id/view_logo"
        android:layout_marginTop="100dp"
        android:layout_marginStart="30dp"
        android:text="@string/dsm_calendar"
        android:textSize="30dp"
        android:fontFamily="@font/bm_dohyun"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/sighUp_button"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/button_signup_round_background"
        android:textColor="#FFFFFF"
        android:text="@string/join"
        android:textSize="24dp"
        android:fontFamily="@font/bm_dohyun"/>

    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/id_et_view"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/login"
        android:textSize="28dp"
        android:fontFamily="@font/bm_dohyun"
        android:textColor="#000000"/>

    <View
        android:id="@+id/id_et_view"
        android:layout_width="260dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="430dp"
        android:background="@drawable/view_id_round_background"/>
    
    <ImageView
        android:id="@+id/iv_id"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="@id/id_et_view"
        app:layout_constraintBottom_toBottomOf="@id/id_et_view"
        app:layout_constraintStart_toStartOf="@id/id_et_view"
        app:layout_constraintEnd_toStartOf="@id/et_id"
        android:src="@drawable/ic_user"
        android:contentDescription="@string/id" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/id_et_view"
        app:layout_constraintBottom_toBottomOf="@+id/id_et_view"
        app:layout_constraintStart_toEndOf="@id/iv_id"
        app:layout_constraintEnd_toEndOf="@+id/id_et_view"
        android:fontFamily="@font/bm_dohyun"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:hint="@string/id"
        android:importantForAutofill="no"
        android:inputType="text"
        android:ems="8"
        android:background="#00000000"/>

    <View
        android:id="@+id/view_line"
        android:layout_width="240dp"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@+id/id_et_view"
        app:layout_constraintBottom_toTopOf="@+id/pw_et_view"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#000000"/>

    <View
        android:id="@+id/pw_et_view"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:background="@drawable/view_pw_round_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_et_view" />

    <ImageView
        android:id="@+id/iv_pw"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="@+id/pw_et_view"
        app:layout_constraintBottom_toBottomOf="@+id/pw_et_view"
        app:layout_constraintStart_toStartOf="@+id/pw_et_view"
        app:layout_constraintEnd_toStartOf="@+id/et_pw"
        android:src="@drawable/ic_lock"
        android:contentDescription="@string/password" />

    <EditText
        android:id="@+id/et_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/pw_et_view"
        app:layout_constraintBottom_toBottomOf="@+id/pw_et_view"
        app:layout_constraintStart_toEndOf="@+id/iv_pw"
        app:layout_constraintEnd_toEndOf="@+id/pw_et_view"
        android:fontFamily="@font/bm_dohyun"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:ems="8"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:background="#00000000"/>

    <ImageButton
        android:id="@+id/bt_check"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@id/pw_et_view"
        app:layout_constraintStart_toEndOf="@id/view_line"
        app:layout_constraintTop_toTopOf="@id/id_et_view"
        android:background="@drawable/button_check_round_background"
        android:src="@drawable/ic_tick"
        android:contentDescription="@string/confirm_button" />

</androidx.constraintlayout.widget.ConstraintLayout>