<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_group_schedule"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="#FFFFFF">

            <ImageButton
                android:id="@+id/button_group_schedule_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"
                android:src="@drawable/ic_left_arrow"
                android:background="@null"/>

            <TextView
                android:id="@+id/tv_group_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/sample_group"
                android:textSize="18dp"
                android:textColor="#6cccde"
                android:fontFamily="@font/bm_dohyun"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view_space"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:layout_constraintTop_toBottomOf="@id/cl_group_schedule"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="600dp"
            app:layout_constraintTop_toBottomOf="@id/view_space"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/fragment_schedule_background"/>

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:id="@+id/cv_group_calendar"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:layout_constraintTop_toBottomOf="@id/cl_group_schedule"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp"
            android:background="#FFFFFF"
            android:elevation="3dp"/>

        <TextView
            android:id="@+id/tv_group_schedule_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cv_group_calendar"
            app:layout_constraintStart_toStartOf="@id/cv_group_calendar"
            android:layout_marginTop="40dp"
            android:text="@string/today"
            android:textColor="#505050"
            android:fontFamily="@font/bm_jua"
            android:textSize="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_group_schedule"
            android:layout_width="300dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/tv_group_schedule_today"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_no_list_group_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/rv_group_schedule"
            app:layout_constraintBottom_toBottomOf="@id/rv_group_schedule"
            app:layout_constraintStart_toStartOf="@id/rv_group_schedule"
            app:layout_constraintEnd_toEndOf="@id/rv_group_schedule"
            android:textSize="20dp"
            android:text="@string/no_list"
            android:fontFamily="@font/bm_dohyun"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/button_group_schedule_add"
            android:layout_width="300dp"
            android:layout_height="80dp"
            app:layout_constraintTop_toBottomOf="@+id/rv_group_schedule"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_plus"
            android:background="@drawable/button_plus_rectangle_background"
            android:elevation="10dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/add_schedule" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>